@@ -1,3 +1,8 @@
+2004-08-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/ottava-bracket.cc (print): always start from right edge of
+	a broken bound. This fixes ottava-clef.ps 
+
 2004-08-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* input/regression/slur-script-inside.ly: new file.
